2007-06-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	Do not fetch messages if folder summary is available.
	
2007-06-04  Srinivasa Ragavan  <sragavan@novell.com>

	** Add missing files.

	* addressbook/e-book-backend-db-cache.c: 
	* addressbook/e-book-backend-db-cache.h:

2007-05-28  Veerapuram Varadhan <vvaradhan@novell.com>

	* camel/camel-exchange-store.c (exchange_store_get_folder_info):
	* mail/mail-stub-exchange.c (get_folder_info):  Don't mask
	CAMEL_FOLDER_INFO_FAST with CAMEL_FOLDER_INFO_SUBSCRIBED and
	handle, CAMEL_FOLDER_INFO_FAST in stub.  FOLDER_INFO_FAST should
	fetch available folders - without a rescan.
	
2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Fix for picking evolution without version 
	specification in the installed files.

2007-06-01  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix an implicit function declaration in the
	LDAP Paged Control test program.

2007-06-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Adds support for GAL Caching and summary. It uses libdb and makes it
	a soft dependency.

	* addressbook/Makefile.am:
	* addressbook/e-book-backend-exchange.c: (update_cache):
	* addressbook/e-book-backend-gal.c: (ldap_reconnect),
	(get_contact), (get_contact_list), (func_contains),
	(member_populate), (get_time_stamp), (build_contact_from_entry),
	(ldap_search_handler), (get_contacts_from_cache),
	(start_book_view), (parse_page_control), (dosearch),
	(generate_cache), (authenticate_user), (set_mode),
	(get_supported_auth_methods), (load_source), (dispose):
	* configure.in:

2007-05-26  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* addressbook/apps_exchange_addressbook.schemas.in.in: Fix
	typo. Fix from Elizabeth Greene <nerdygirl_ellie@yahoo.com>
	(#424419).

2007-05-19  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder.c:
	* storage/exchange-migrate.c: